[package]
name = "multitask"
version = "0.2.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "An executor for running async tasks"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/multitask"
homepage = "https://github.com/stjepang/multitask"
documentation = "https://docs.rs/multitask"
keywords = ["task", "spawn", "work", "stealing", "execute"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
async-task = "3.0.0"
concurrent-queue = "1.1.1"
fastrand = "1.2.4"
thread_local = "1.0.1"
cache-padded = "1.1.1"

[dev-dependencies]
async-io = "0.1.1"
blocking = "0.4.6"
parking = "1.0.3"
